[package]
name = "fundex"
version = "0.22.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.48"
atomic_refcell = "0.1.6"
bigdecimal = { version = "0.1.0", features = ["serde"] }
bytes = "0.5"
diesel = { version = "1.4.6", features = ["postgres", "serde_json", "numeric", "r2d2"] }
diesel_derives = "1.4"
chrono = "0.4"
Inflector = "0.11.3"
isatty = "0.1"
reqwest = "0.10"

ethabi = { path = "ethabi" }
hex = "0.4.3"
http = "0.2"
futures = "0.1.21"
graphql-parser = {  git = "https://github.com/graphql-rust/graphql-parser.git", branch = "master" }
lazy_static = "1.4.0"
mockall = "0.8"
num-bigint = { version = "^0.2.6", features = ["serde"] }
num_cpus = "1.13.0"
num-traits = "0.2"
rand = "0.6.1"
semver = "0.10.0"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
serde_yaml = "0.8"
slog = { version = "2.5.2", features = ["release_max_level_trace", "max_level_trace"] }
stable-hash = { path = "stable-hash" }
strum = "0.20.0"
strum_macros = "0.20.1"
slog-async = "2.5.0"
slog-envlogger = "2.1.0"
slog-term = "2.6.0"
petgraph = "0.5.1"
tiny-keccak = "1.5.0"
tokio = { version = "0.2.22", features = ["stream", "rt-threaded", "rt-util", "blocking", "time", "sync", "macros", "test-util"] }
tokio-retry = { path = "tokio-retry" }
url = "2.2.1"
prometheus = "0.12.0"
priority-queue = "0.7.0"
futures03 = { version = "0.3.1", package = "futures", features = ["compat"] }
uuid = { version = "0.8.1", features = ["v4"] }
wasmparser = "0.63.1"
thiserror = "1.0"
parking_lot = "0.11.1"

# Our fork contains a small but hacky patch.
web3 = { path = "web3" }

[dev-dependencies]
maplit = "1.0.2"
structopt = { version = "0.3" }

[workspace]
members = ["ethabi", "stable-hash", "tokio-retry", "web3"]