[package]
name = "tokio-retry"
version = "0.2.0"
keywords = ["futures", "tokio", "retry", "exponential", "backoff"]
edition = "2018"

[dependencies]
futures = "0.1.11"
futures03 = { version = "0.3.1", package = "futures", features = ["compat"] }
rand = "0.4.0"
tokio = { version = "0.2.4", features = ["time", "rt-core", "macros"] }

[dev-dependencies]
quickcheck = "0.6.0"
